Fix overflow by clipping html

--- a/src/index.css
+++ b/src/index.css
@@ -176,7 +176,8 @@
 
   #root {
     width: 100%;
-    max-width: 100%;
+    max-width: 100vw;
+    overflow-x: clip;
     min-height: -webkit-fill-available;
     min-height: var(--app-vh, 100dvh);
     background-color: hsl(var(--background));
